Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignTextObjBoolean.quorum
Text t = cast(Text, true)
output t:GetValue()