Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignIntObjBoolObj.quorum
Boolean b
b:SetValue(true)
Integer i = cast(Integer, b)